Integrere gestion_finance